# tst-release

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml  pre-commit.yml  release-please.yml
src/: CMakeLists.txt
tests/: CMakeLists.txt  tst_qt.cpp  tst_spdlog.cpp
